# telegram-coin-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
lib/: __init__.py  utils.py
lib/sms/: __init__.py  sms.py
strategies/: no-risk-2.py  no-risk-without-volume-and-trend.py  no-risk-without-volume.py  no-risk.py  test.py
test/: candle.py  sms.py
