[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "sinyal-bakar"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pandas",
    "pandas-ta",
    "numpy",
    "mplfinance",
    "python-telegram-bot",
    "python-dotenv",
]

[project.scripts]
start = "main:main"
